# sonde-hunter-pi

./: .gitignore  LICENSE  README.md  config.example.toml  pyproject.toml  sonde-hunter-pi.service
src/: autorx.py  config.py  custom_logging.py  display.py  gpsd.py  main.py  touch.py
