[project]
name = "sonde-hunter-pi"
version = "0.1.0"
description = "Easily locate radiosondes using a raspberry pi "
authors = [
    {name = "DB8LE",email = "db8le@darc.de"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10,<4"
dependencies = [
    "luma-lcd (>=2.11.0,<3.0.0)",
    "luma-core (>=2.5.2,<3.0.0)",
    "pillow (>=12.0.0,<13.0.0)",
    "spidev (>=3.8,<4.0)",
    "rpi-gpio (>=0.7.1,<0.8.0)",
    "geopy (>=2.4.1,<3.0.0)",
    "geographiclib (>=2.1,<3.0)",
    "gpiozero (>=2.0.1,<3.0.0)",
    "pigpio (>=1.78,<2.0)"
]

[project.optional-dependencies]
journal = ["systemd-python"]

[tool.poetry]
packages = [{ include = "src" }]
include = ["src/resources/**"]

[tool.poetry.scripts]
sonde-hunter-pi = "src.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
